--- a/gpu-cpu/a10.yaml
+++ b/gpu-cpu/a10.yaml
@@ -1,20 +1,22 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: tensorflow-vgg16-cpu-A
+  name: a10
 spec:
   containers:
-  - name: tensorflow-alexnet-cpu
+  - name: tensorflow-alexnet-gpu
     image: swiftdiaries/bench
     command:
     - "/bin/bash"
     - "-c"
-    - "python tf_cnn_benchmarks.py --device=cpu --model=vgg16 --data_format=NHWC --batch_size=32"  
+    - "python tf_cnn_benchmarks.py --device=gpu --model=alexnet --batch_size=128 --num_gpus=1 --gpu_mem_fraction=0.1"  
     resources:
       requests:
-        cpu: 20
+        alpha.kubernetes.io/nvidia-gpu: 1
+        cpu: 40
       limits:
-        cpu: 20
+        alpha.kubernetes.io/nvidia-gpu: 1
+        cpu: 40
     volumeMounts:
     - name: nvidia-driver-375-82
       mountPath: /usr/local/nvidia
