--- a/gpu-cpu/a100.yaml
+++ b/gpu-cpu/a100.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: tensorflow-alexnet-gpu-A
+  name: a100
 spec:
   containers:
   - name: tensorflow-alexnet-gpu
@@ -9,14 +9,14 @@ spec:
     command:
     - "/bin/bash"
     - "-c"
-    - "python tf_cnn_benchmarks.py --device=gpu --model=alexnet --batch_size=32 --num_gpus=2"  
+    - "python tf_cnn_benchmarks.py --device=gpu --model=alexnet --batch_size=32 --num_gpus=1 --gpu_mem_fraction=1.0"  
     resources:
       requests:
         alpha.kubernetes.io/nvidia-gpu: 1
-        cpu: 10
+        cpu: 24
       limits:
         alpha.kubernetes.io/nvidia-gpu: 1
-        cpu: 10
+        cpu: 24
     volumeMounts:
     - name: nvidia-driver-375-82
       mountPath: /usr/local/nvidia
