--- a/gpu-cpu/a5.yaml
+++ b/gpu-cpu/a5.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: tensorflow-vgg16-gpu
+  name: a5
 spec:
   containers:
   - name: tensorflow-alexnet-gpu
@@ -9,14 +9,14 @@ spec:
     command:
     - "/bin/bash"
     - "-c"
-    - "python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --batch_size=32 --num_gpus=2"  
+    - "python tf_cnn_benchmarks.py --device=gpu --model=alexnet --batch_size=128 --num_gpus=1 --gpu_mem_fraction=0.05"  
     resources:
       requests:
         alpha.kubernetes.io/nvidia-gpu: 1
-        cpu: 12
+        cpu: 40
       limits:
         alpha.kubernetes.io/nvidia-gpu: 1
-        cpu: 12
+        cpu: 40
     volumeMounts:
     - name: nvidia-driver-375-82
       mountPath: /usr/local/nvidia
