--- a/gpu-fraction/jobs/vgg16-cpu-job4.yaml
+++ b/gpu-fraction/jobs/vgg16-cpu-job4.yaml
@@ -9,7 +9,7 @@ spec:
     command:
     - "/bin/bash"
     - "-c"
-    - "echo start...  & python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --data_format=NHWC --batch_size=16 --num_batches=1000 --gpu_mem_fraction=0.24 & python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --data_format=NHWC --batch_size=16 --num_batches=1000 --gpu_mem_fraction=0.24 & python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --data_format=NHWC --batch_size=16 --num_batches=1000 --gpu_mem_fraction=0.24 & python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --data_format=NHWC --batch_size=16 --num_batches=1000 --gpu_mem_fraction=0.24; wait"  
+    - "echo start...  & python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --data_format=NHWC --batch_size=16 --num_batches=1000 --gpu_mem_fraction=0.2 & python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --data_format=NHWC --batch_size=16 --num_batches=1000 --gpu_mem_fraction=0.2 & python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --data_format=NHWC --batch_size=16 --num_batches=1000 --gpu_mem_fraction=0.2 & python tf_cnn_benchmarks.py --device=gpu --model=vgg16 --data_format=NHWC --batch_size=16 --num_batches=1000 --gpu_mem_fraction=0.2"  
     resources:
       requests:
         alpha.kubernetes.io/nvidia-gpu: 1
